server/src/snapshots/djinn_server__mcp_contract_tests__task_tools__task_count_plain_response.snap
---
source: src/mcp_contract_tests.rs
assertion_line: 1699
expression: plain
---
{
  "total_count": 2
}
