server/src/snapshots/djinn_server__mcp_contract_tests__task_tools__task_show_response.snap
---
source: src/mcp_contract_tests.rs
expression: ok
---
{
  "acceptance_criteria": [
    "{\"description\":\"default test criterion\",\"met\":false}"
  ],
  "active_session": null,
  "ci_gate_state": "unknown",
  "ci_status": "unknown",
  "close_reason": null,
  "closed_at": null,
  "continuation_count": 0,
  "created_at": "[TIMESTAMP]",
  "description": "test task description",
  "design": "test task design",
  "epic_id": "[UUID]",
  "id": "[UUID]",
  "intervention_count": 0,
  "issue_type": "task",
  "labels": [],
  "memory_refs": [],
  "merge_commit_sha": null,
  "owner": "test-owner",
  "priority": 2,
  "reopen_count": 0,
  "session_count": 0,
  "short_id": "[SHORT_ID]",
  "status": "open",
  "title": "test-task",
  "total_reopen_count": 0,
  "updated_at": "[TIMESTAMP]"
}
